# course_work_db

./: .gitignore  api.py  config.py  database.ini  db_manager.py  main.py  pyproject.toml  work_with_db.py
